Done, tot zover dan

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 lib_deps =
     SPI
     https://github.com/adafruit/Adafruit_TCS34725
+    https://github.com/Azure/azure-sdk-for-c-arduino
+	bblanchon/ArduinoJson@^6.19.4
